[tool.poetry]
name = "goit-pyweb-hw-12"
version = "0.1.0"
description = ""
authors = ["Maksym <maxkord2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
sqlalchemy = "^2.0.32"
psycopg2 = "^2.9.9"
bcrypt = "^4.2.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.9"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
